deploy/archive/models/nemotron-nano-nvfp4/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nemotron-nano-nvfp4-route
  namespace: token-labs
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: token-labs-gateway
    namespace: token-labs
  rules:
  - backendRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: nemotron-nano-nvfp4-vllm-backend
      weight: 1
    filters:
    - extensionRef:
        group: gateway.envoyproxy.io
        kind: HTTPRouteFilter
        name: ai-eg-host-rewrite
      type: ExtensionRef
    matches:
    - headers:
      - name: x-ai-eg-model
        type: Exact
        value: nvidia/Nemotron-3-Nano-Omni-30B-A3B-Reasoning-NVFP4
      path:
        type: PathPrefix
        value: /v1/
    timeouts:
      request: 600s
